--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   musicbot:
-    image: ghcr.io/deanyo/dannythedj:latest
+    image: ghcr.io/deanyo/dannythedj:${IMAGE_TAG:-latest}
     environment:
       DISCORD_TOKEN: ${DISCORD_TOKEN}
       CLIENT_ID: ${CLIENT_ID}
