--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DISCORD_TOKEN=your_token_here
 CLIENT_ID=your_application_client_id
 GUILD_ID=optional_test_guild_id
+LOG_LEVEL=info
+HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
+HEALTHCHECK_MAX_AGE_SECONDS=120
