--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -7,4 +7,5 @@ services:
       DISCORD_TOKEN: ${DISCORD_TOKEN}
       CLIENT_ID: ${CLIENT_ID}
       GUILD_ID: ${GUILD_ID}
+      LOG_LEVEL: ${LOG_LEVEL}
     restart: unless-stopped
