add volume control and idle disconnect

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ DISCORD_TOKEN=your_token_here
 CLIENT_ID=your_application_client_id
 GUILD_ID=optional_test_guild_id
 LOG_LEVEL=info
+DEFAULT_VOLUME=100
+IDLE_DISCONNECT_SECONDS=300
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
 HEALTHCHECK_MAX_AGE_SECONDS=120
