--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ GUILD_ID=optional_test_guild_id
 LOG_LEVEL=info
 DEFAULT_VOLUME=100
 IDLE_DISCONNECT_SECONDS=5
+STREAM_START_TIMEOUT_MS=15000
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
 HEALTHCHECK_MAX_AGE_SECONDS=120
