--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@discordjs/voice": "^0.19.0",
     "@snazzah/davey": "^0.1.0",
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "opusscript": "^0.0.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
