--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ IDLE_DISCONNECT_SECONDS=5
 STREAM_START_TIMEOUT_MS=15000
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
 HEALTHCHECK_MAX_AGE_SECONDS=120
+# Optional yt-dlp auth/proxy settings.
+# YTDLP_COOKIES_PATH=/path/to/youtube-cookies.txt
+# YTDLP_COOKIES_FROM_BROWSER=chrome
+# YTDLP_PROXY=http://user:pass@host:port
