add yt-dlp remote components

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ HEALTHCHECK_MAX_AGE_SECONDS=120
 # YTDLP_COOKIES_PATH=/path/to/youtube-cookies.txt
 # YTDLP_COOKIES_FROM_BROWSER=chrome
 # YTDLP_PROXY=http://user:pass@host:port
+# YTDLP_REMOTE_COMPONENTS=ejs:github
