--- a/portainer.env.example
+++ b/portainer.env.example
@@ -10,4 +10,5 @@ HEALTHCHECK_MAX_AGE_SECONDS=120
 YTDLP_COOKIES_PATH=
 YTDLP_COOKIES_FROM_BROWSER=
 YTDLP_PROXY=
+YTDLP_REMOTE_COMPONENTS=ejs:github
 IMAGE_TAG=latest
