--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       LOG_LEVEL: ${LOG_LEVEL}
       DEFAULT_VOLUME: ${DEFAULT_VOLUME}
       IDLE_DISCONNECT_SECONDS: ${IDLE_DISCONNECT_SECONDS}
+      YTDLP_REMOTE_COMPONENTS: ${YTDLP_REMOTE_COMPONENTS}
     restart: unless-stopped
