improve playlist queuing

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ LOG_LEVEL=info
 DEFAULT_VOLUME=100
 IDLE_DISCONNECT_SECONDS=5
 STREAM_START_TIMEOUT_MS=15000
+PLAYLIST_LIMIT=50
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
 HEALTHCHECK_MAX_AGE_SECONDS=120
 # Optional yt-dlp auth/proxy settings.
