--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -10,5 +10,6 @@ services:
       LOG_LEVEL: ${LOG_LEVEL}
       DEFAULT_VOLUME: ${DEFAULT_VOLUME}
       IDLE_DISCONNECT_SECONDS: ${IDLE_DISCONNECT_SECONDS}
+      PLAYLIST_LIMIT: ${PLAYLIST_LIMIT}
       YTDLP_REMOTE_COMPONENTS: ${YTDLP_REMOTE_COMPONENTS}
     restart: unless-stopped
