--- a/portainer.env.example
+++ b/portainer.env.example
@@ -11,4 +11,5 @@ YTDLP_COOKIES_PATH=
 YTDLP_COOKIES_FROM_BROWSER=
 YTDLP_PROXY=
 YTDLP_REMOTE_COMPONENTS=ejs:github
+PLAYLIST_LIMIT=50
 IMAGE_TAG=latest
