--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,7 @@ services:
       DEFAULT_VOLUME: ${DEFAULT_VOLUME}
       IDLE_DISCONNECT_SECONDS: ${IDLE_DISCONNECT_SECONDS}
       PLAYLIST_LIMIT: ${PLAYLIST_LIMIT}
+      DEBUG_LOG_CHANNEL_ID: ${DEBUG_LOG_CHANNEL_ID}
+      DEBUG_LOG_THROTTLE_SECONDS: ${DEBUG_LOG_THROTTLE_SECONDS}
       YTDLP_REMOTE_COMPONENTS: ${YTDLP_REMOTE_COMPONENTS}
     restart: unless-stopped
