--- a/portainer.env.example
+++ b/portainer.env.example
@@ -5,6 +5,7 @@ LOG_LEVEL=info
 DEFAULT_VOLUME=100
 IDLE_DISCONNECT_SECONDS=5
 STREAM_START_TIMEOUT_MS=15000
+RESOLVE_TIMEOUT_MS=20000
 DEBUG_LOG_CHANNEL_ID=
 DEBUG_LOG_THROTTLE_SECONDS=60
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
