add search results command

--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -12,6 +12,8 @@ services:
       IDLE_DISCONNECT_SECONDS: ${IDLE_DISCONNECT_SECONDS}
       PLAYLIST_LIMIT: ${PLAYLIST_LIMIT}
       RESOLVE_TIMEOUT_MS: ${RESOLVE_TIMEOUT_MS}
+      SEARCH_TIMEOUT_MS: ${SEARCH_TIMEOUT_MS}
+      SEARCH_RESULTS_LIMIT: ${SEARCH_RESULTS_LIMIT}
       DEBUG_LOG_CHANNEL_ID: ${DEBUG_LOG_CHANNEL_ID}
       DEBUG_LOG_THROTTLE_SECONDS: ${DEBUG_LOG_THROTTLE_SECONDS}
       YTDLP_REMOTE_COMPONENTS: ${YTDLP_REMOTE_COMPONENTS}
