--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ IDLE_DISCONNECT_SECONDS=5
 STREAM_START_TIMEOUT_MS=15000
 PLAYLIST_LIMIT=50
 RESOLVE_TIMEOUT_MS=20000
+SEARCH_TIMEOUT_MS=20000
+SEARCH_RESULTS_LIMIT=5
 DEBUG_LOG_CHANNEL_ID=
 DEBUG_LOG_THROTTLE_SECONDS=60
 HEALTHCHECK_PATH=/tmp/musicbot-healthcheck
